--- a/FrontDemo/src/app/app.component.html
+++ b/FrontDemo/src/app/app.component.html
@@ -1,18 +1,14 @@
-
-
 <!-- Toolbar -->
 <div class="toolbar" role="banner">
-
-  <span>Welcome</span>
-    <div class="spacer"></div>
+  <span>AI Agent Manager</span>
+  <div class="spacer"></div>
 </div>
+
 <nav>
-  <a routerLink="/nouveau-agent"> Create a new AI agent</a>
-  ----
-  <a routerLink="/consulter-agent"> Consulter AI agens</a>
+  <a routerLink="/nouveau-agent" routerLinkActive="active">Create a new AI agent</a>
+  <a routerLink="/consulter-agent" routerLinkActive="active">Manage AI agents</a>
 </nav>
-<div class = "main-container">
+
+<div class="main-container">
   <router-outlet></router-outlet>
 </div>
-
-
