--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="spacer"></div>
     <div class="user-section">
       <div class="user-info">
-        <div class="welcome-message">Hello, {{username}} !</div>
+        <div class="welcome-message">Hello, {{name}} !</div>
         <a (click)="authService.signOut()" class="sign-out-btn">
           <i class="sign-out-icon"></i>Sign out
         </a>
